examples/test/testpolicy5860.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5860
  namespace: namespace6
spec:
  podSelector:
    matchLabels:
      key15: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value39
      podSelector:
        matchLabels:
          key30: value16
          key3: value11
          key1: value49
